updated socials in footer

--- a/index.html
+++ b/index.html
@@ -411,10 +411,10 @@
 			<div class="container">
 				<div class="social-media">
 					<span class="social">
-						<a href="#"><i class="icon-facebook"></i></a>
-						<a href="#"><i class="icon-twitter"></i></a>
+						<a href="http://www.facebook.com/selfieboxio"><i class="icon-facebook"></i></a>
+						<a href="http://www.twitter.com/selfieboxio"><i class="icon-twitter"></i></a>
 						<a href="#"><i class="icon-google-plus"></i></a>
-						<a href="#"><i class="icon-pinterest"></i></a>
+						<a href="http://www.pinterest.com/selfieboxio"><i class="icon-pinterest"></i></a>
 					</span>
 				</div>
 					&copy; 2015 Selfie Box IO. All rights reserved.
