--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="container">
 		
 			<div class="navbar-header">
-			<a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo" /></a>
+			<a class="navbar-brand" href="#"><img src="images/selfieboxlogo.png" alt="Logo" /></a>
 			</div>
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 			<span class="sr-only">Toggle navigation</span>
@@ -67,9 +67,9 @@
 			<ul class="nav navbar-nav navbar-right" >
 				<li><a href="#intro">Home</a></li>
 				<li><a href="#features">Features</a></li>
-				<li><a href="#screens">Screens</a> </li>
+				<li><a href="#screens">Event Gallery</a> </li>
 				<li><a href="#testimonials">Testimonials</a></li>
-				<li><a href="#plans">Pricing & Plans</a> </li>
+				<li><a href="#plans">Pricing</a> </li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>	
 			</div>
@@ -86,7 +86,7 @@
 	<div id="intro">
 		<div class="headline-bg">
 			<div class="headline-left-content">
-				<div class="animated fadeIn"><h1>Photobooths Made Easy!</h1>
+				<div class="animated fadeIn"><h1>Pittsburgh Photobooths Made Easy!</h1>
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vivamus velit. Morbi odio.<br /> 
 				Ut in sapien. Proin nec erat vitae orci tincidunt iaculis morbi laoreet.
 				</div>
@@ -190,7 +190,7 @@
 		<div class="dot-screens">
 			<a class="icon-picture" href="#screens"></a>
 		</div>
-			<h2>Photobooth Screens</h2> 
+			<h2>Event Gallery</h2> 
 			
 			<div class="container">
 			
@@ -286,7 +286,7 @@
 		<div class="dot-plans">
 		<a class="icon-sitemap" href="#plans"></a>
 		</div>
-			<div class="plans"><h2>PRICING & PLANS</h2></div> 
+			<div class="plans"><h2>PRICING</h2></div> 
 		
 		<div class="container">	
 
